[package]
name = "gitcal"
version = "0.1.2"
edition = "2021"
description = "A CLI tool for calendar visualization"
documentation = "https://docs.rs/gitcal"
readme = "README.md"
homepage = "https://github.com/denehoffman/gitcal"
repository = "https://github.com/denehoffman/gitcal"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.128"
colored = "2.1.0"
hex_color = "3.0.0"
clap = "4.5.17"
jiff = "0.1.13"
